manifests/postgresql/base/pgbouncer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: pgbouncer
  name: pgbouncer
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: pgbouncer
  template:
    metadata:
      labels:
        app.kubernetes.io/component: pgbouncer
    spec:
      containers:
        - env:
            - name: POSTGRESQL_USER
              valueFrom:
                secretKeyRef:
                  key: database-user
                  name: postgresql
            - name: POSTGRESQL_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: database-password
                  name: postgresql
            - name: POSTGRESQL_DATABASE
              valueFrom:
                secretKeyRef:
                  key: database-name
                  name: postgresql
            - name: POSTGRES_SERVICE_HOST
              value: postgresql
          image: >-
            quay.io/enterprisedb/pgbouncer@sha256:9daeae8df759d30c32e1cfade4cc7e82ace987d50de5fbafccd78a523db4c940
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - killall -INT pgbouncer && sleep 120
          livenessProbe:
            tcpSocket:
              port: 5432
          ports:
            - containerPort: 5432
          readinessProbe:
            tcpSocket:
              port: 5432
          resources:
            requests:
              cpu: 500m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 128Mi
          name: pgbouncer
          volumeMounts:
            - mountPath: /etc/pgbouncer
              name: config
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
      serviceAccount: postgresql
      serviceAccountName: postgresql
      volumes:
        - configMap:
            defaultMode: 420
            name: pgbouncer
          name: config
---
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    service: pgbouncer
